syntax = "proto3";

option java_package = "volantes.grpc.login";

package login;

service LoginService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}